clean up parallel

--- a/tutorial/src/parallelization.Rmd
+++ b/tutorial/src/parallelization.Rmd
@@ -24,8 +24,22 @@ E.g., if you do not want to parallelize the [&benchmark] function because it has
 you can specifically pass the ``level`` `"mlr.resample"` to the [parallelStart*](&parallelMap::parallelStart) function.
 Currently the following levels are supported:
 ```{r}
-parallelShowRegisteredLevels()
+parallelGetRegisteredLevels()
 ```
 
-For further ways of parallelizing your computations, consult the
+Here is a brief explanation of what these levels do:
+
+* **resample**: Each resampling iteration (a train / test step) is a parallel job.
+* **benchmark**: Each experiment "run this learner on this data set" is a parallel job.
+* **tuneParams**: Each evaluation in hyperparameter space "resample with these parameter settings" is a parallel job.
+  How many of these can be run independently in parallel, depends on the tuning algorithm.
+  For grid search or random search this is
+  no problem, but for other tuners it depends on how many points are produced in each iteration
+  of the optimization. If a tuner works in a purely sequential fashion, we cannot work magic and the
+  hyperparameter evaluation will also run sequentially. But note that you can still parallelize the
+  underlying resampling.
+* **selectFeatures**: Each evaluation in feature space "resample with this feature subset" is a parallel job.
+  The same comments as for "tuneParams" apply here.
+
+For further details, consult the
 [parallelMap tutorial](https://github.com/berndbischl/parallelMap#parallelmap) and help.
