--- a/tutorial/src/performance.Rmd
+++ b/tutorial/src/performance.Rmd
@@ -44,7 +44,7 @@ In the following example we fit a [gradient boosting machine](&gbm::gbm) on a su
 ([mse](measures.md)) on the remaining observations.
 
 ```{r}
-n = getTaskDescription(bh.task)$size
+n = getTaskSize(bh.task)
 lrn = makeLearner("regr.gbm", n.trees = 1000)
 mod = train(lrn, task = bh.task, subset = seq(1, n, 2))
 pred = predict(mod, task = bh.task, subset = seq(2, n, 2))
@@ -136,7 +136,7 @@ as well as the misclassification rate ([mmce](measures.md)) for all possible thr
 
 ```{r}
 lrn = makeLearner("classif.lda", predict.type = "prob")
-n = getTaskDescription(sonar.task)$size
+n = getTaskSize(sonar.task)
 mod = train(lrn, task = sonar.task, subset = seq(1, n, by = 2))
 pred = predict(mod, task = sonar.task, subset = seq(2, n, by = 2))
 
