--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,7 @@
 mlr_2.4:
+- we had to slightly change how the mem usage is reported in tuning and feature selection.
+  See TuneControl and FeatSelControl where it is documented what is done now.
+
 - new measures
 -- brier
 
